--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 		<div id="mensaje" class="mensaje"></div>
 	</div>
 
+	<script src="js/config.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
